<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/my_orders"
                android:icon="@drawable/ic_shopping_basket_black_24dp"
                android:title="@string/my_orders" />
        <item
                android:id="@+id/my_cart"
                android:icon="@drawable/ic_shopping_cart_black_24dp"
                android:title="@string/my_cart" />
        <item
                android:id="@+id/my_rewards"
                android:icon="@drawable/ic_card_giftcard_black_24dp"
                android:title="@string/my_rewards" />
        <item
                android:id="@+id/my_account"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/my_account" />
    </group>


    <item android:title="@string/help_support">
        <menu>
            <item
                android:id="@+id/contact_us"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/terms_conditions"
                android:title="@string/terms_conditions" />
            <item
                android:id="@+id/privacy_policy"
                android:title="@string/privacy_policy" />
            <item
                android:id="@+id/help_center"
                android:title="@string/help_center" />
            <item
                android:id="@+id/log_out"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
