<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/activity_cart_list"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/white"
            app:logo="@null"
            android:gravity="left"
            app:title="Checkout"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:background="@color/colorPrimary"/>


    <ScrollView
        android:id="@+id/sclDetail"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadeScrollbars="true"
        android:scrollbars="none">

        <LinearLayout android:id="@+id/layout_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_weight="9.5"
        android:orientation="vertical">



            <android.support.v7.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="4dp"
                card_view:cardElevation="3sp"
                card_view:cardUseCompatPadding="true"
                android:layout_below="@+id/toolbar">

                <LinearLayout
                    android:id="@+id/lytContent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp" >

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/TextInputLayout1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edtName"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:hint="@string/checkout_your_name"
                            android:inputType="textCapWords"
                            android:padding="7dp" >
                        </EditText>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/TextInputLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edtAlamat"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:ems="10"
                            android:hint="@string/checkout_address"
                            android:inputType="textPostalAddress"
                            android:padding="7dp" >
                        </EditText>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/TextInputLayout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edtKota"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:hint="@string/checkout_city"
                            android:ems="10" >
                        </EditText>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/TextInputLayout4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edtProvinsi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:hint="@string/checkout_province"
                            android:ems="10" >
                        </EditText>

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/TextInputLayout5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edtPhone"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:hint="@string/checkout_phone_number"
                            android:inputType="phone"
                            android:padding="7dp" >
                        </EditText>

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/TextInputLayout7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:ems="10"
                            android:hint="@string/checkout_email"
                            android:inputType="textEmailAddress"
                            android:padding="7dp" >
                        </EditText>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/TextInputLayout8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edtComment"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:gravity="top|left"
                            android:hint="@string/checkout_add_comment"
                            android:inputType="textMultiLine"
                            android:padding="7dp" >
                        </EditText>

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btn_Send"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/checkout_send_order"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

    </LinearLayout>
    </ScrollView>
</LinearLayout>
