<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">
    <android.support.design.widget.AppBarLayout
            android:id="@+id/toolbarwrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/scrollbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:titleTextColor="@color/white"
                app:logo="@null"
                android:gravity="left"
                app:title="@string/contact_us"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:background="@color/colorPrimary">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarwrap">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginBottom="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/toolbarwrap">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/tv2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:layout_marginTop="15dp"
                            android:paddingLeft="15dp"
                            android:paddingEnd="15dp"
                            android:paddingRight="15dp"
                            android:paddingStart="15dp"
                            style="@android:style/TextAppearance.Small"
                            android:text="@string/call_us_at"
                            android:textColor="@color/black" />

                    <TextView
                            android:id="@+id/tv3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_marginEnd="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:layout_marginTop="15dp"
                            android:paddingLeft="15dp"
                            android:paddingEnd="15dp"
                            android:paddingRight="15dp"
                            android:paddingStart="15dp"
                            style="@android:style/TextAppearance.Small"
                            android:text="@string/contact_num"
                            android:textColor="@color/black"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv2" />

                    <TextView
                            android:id="@+id/tv4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:layout_marginTop="15dp"
                            android:paddingLeft="15dp"
                            android:paddingEnd="15dp"
                            android:paddingRight="15dp"
                            android:paddingStart="15dp"
                            style="@android:style/TextAppearance.Small"
                            android:text="@string/email_us_at"
                            android:textColor="@color/black"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv3" />

                    <TextView
                            android:id="@+id/tv5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:layout_marginTop="15dp"
                            android:paddingLeft="15dp"
                            android:paddingEnd="15dp"
                            android:paddingRight="15dp"
                            android:paddingStart="15dp"
                            style="@android:style/TextAppearance.Small"
                            android:text="@string/contact_email"
                            android:textColor="@color/black"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv4" />
                </LinearLayout>
            </LinearLayout>
    </ScrollView>>
    </android.support.constraint.ConstraintLayout>
